# scienceReplication

./: gunicorn.conf.py  manage.py  scienceReplication.artiswrong.com.conf  sciencereplication-django.service
.claude/: settings.local.json
example_paper/: 2401.05347.xml  Income_and_emotional_wellbeing_a_conflict_resolved.csv
paper-replication-income-wellbeing/: TODO.md  expected_results.json  generate_plots.py  main.py  pyproject.toml
paper-replication-income-wellbeing/analysis/: data_loading.py  ols_regression.py  quantile_regression.py
paper-replication-income-wellbeing/comparison/: comparator.py  report_generator.py
paper-replication-income-wellbeing/results/: comparison_report.json  comparison_report.md  computed_results.json  replication_dashboard.html
papers/: admin.py  forms.py  latex_parser.py  latex_processor.py  models.py  urls.py  views.py
papers/migrations/: 0001_initial.py  0002_paper_latex_url_paper_pdf_url.py  0003_paperupload.py  0004_paper_xml_path_alter_paper_source.py
papers/scrapers/: dataset_spider.py  items.py  pipelines.py  runner.py  settings.py
replicate-paper/: SKILL.md
replicate-paper/assets/: pyproject_template.toml
replicate-paper/evals/: evals.json
replicate-paper/references/: common_methods.md  latexml_elements.md  output_schema.md
replicate-paper/scripts/: detect_data_format.py  parse_latexml.py
sciencereplication/: asgi.py  settings.py  urls.py  wsgi.py
site_output/: index.html
site_output/40hz-brain-stimulation/: index.html
site_output/developmental-psychology/: index.html
(+187 files in other folders)
